--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -19,6 +19,9 @@ fr:
       search_location: NOTRANSLATE
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
+      trait_filter:
+        identifier:
+          anonymous: 
   cells:
     contact_people:
       dr: Dr.
@@ -1045,6 +1048,27 @@ fr:
         organizations: 'Un service de:'
       who_section:
         heading: Tu peux t'adresser à qui?
+      accessibility: 
+      anonymous: 
+      charged: 
+      confidential: 
+      day_and_night: 
+      free: 
+      trait_filters:
+        explanation:
+          accessibility: 
+          anonymous: 
+          charged: 
+          confidential: 
+          day_and_night: 
+          free: 
+        title:
+          accessibility: 
+          anonymous: 
+          charged: 
+          confidential: 
+          day_and_night: 
+          free: 
   opening:
     display_string:
       appointment: sur rendez-vous
@@ -1341,3 +1365,9 @@ fr:
     new:
       button: Message reçu
       email_placeholder: Adresse électronique
+  accessibility: 
+  anonymous: 
+  charged: 
+  confidential: 
+  day_and_night: 
+  free: 
