--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1371,6 +1371,8 @@ de:
           exclusive_gender:
             boys_only: nur für Jungen und Männer
             girls_only: nur für Mädchen und Frauen
+            female: nur für Mädchen und Frauen
+            male: nur für Jungen und Männer
           target_audience:
             children: für Kinder und Jugendliche
             family_children: für Kinder und Jugendliche
