--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,5 @@
 en:
+  accessibility: 
   activerecord:
     attributes:
       contact:
@@ -18,10 +19,11 @@ en:
       contact: NOTRANSLATE
       search_location: NOTRANSLATE
       subscription: NOTRANSLATE
-      update_request: NOTRANSLATE
       trait_filter:
         identifier:
           anonymous: 
+      update_request: NOTRANSLATE
+  anonymous: 
   cells:
     contact_people:
       dr: Dr.
@@ -367,10 +369,12 @@ en:
             url: mailto:post@clarat.org
             var: mailto_clarat
           question: Why isn’t my organization on clarat?
+  charged: 
   conf:
     current_location: My location
     default_latlng: 52.520007,13.404954
     default_location: Berlin
+  confidential: 
   contacts:
     create:
       success: Message successfully sent.
@@ -388,6 +392,7 @@ en:
         name_placeholder: Name (obligatory)
         send: Send
         send_us_a_message: Write us a message
+  day_and_night: 
   emails:
     offers_index:
       family:
@@ -617,6 +622,7 @@ en:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+  free: 
   js:
     ajax_error:
       error: Search error
@@ -943,8 +949,8 @@ en:
             portal: address list
           exclusive_gender:
             boys_only: boys and men only
-            girls_only: girls and women only
             female: girls and women only
+            girls_only: girls and women only
             male: boys and men only
           target_audience:
             children: for children and teenagers
@@ -982,6 +988,12 @@ en:
           long: Support services and programmes connected with...
           short: Support services about  …
     show:
+      accessibility: 
+      anonymous: 
+      charged: 
+      confidential: 
+      day_and_night: 
+      free: 
       last_update: Entry last modified on
       next_steps:
         code_word: 'This is what the service provider calls this support service:'
@@ -997,6 +1009,22 @@ en:
           wed: Wednesday
         heading: When can you do that?
       speaking: What languages do they speak?
+      trait_filters:
+        explanation:
+          accessibility: 
+          anonymous: 
+          charged: 
+          confidential: 
+          day_and_night: 
+          free: 
+        title:
+          accessibility: accessible
+          anonymous: anonym
+          charged: with costs
+          confidential: confidential
+          day_and_night: 24/7
+          free: free
+      trait_filters_headline: Additional information
       website_section:
         internet_presence: Where can you get more information online?
         websites:
@@ -1032,27 +1060,6 @@ en:
         organizations: 'This is a support service provided by:'
       who_section:
         heading: How can you get in touch?
-      accessibility: 
-      anonymous: 
-      charged: 
-      confidential: 
-      day_and_night: 
-      free: 
-      trait_filters:
-        explanation:
-          accessibility: 
-          anonymous: 
-          charged: 
-          confidential: 
-          day_and_night: 
-          free: 
-        title:
-          accessibility: 
-          anonymous: 
-          charged: 
-          confidential: 
-          day_and_night: 
-          free: 
   opening:
     display_string:
       appointment: by appointment
@@ -1450,9 +1457,3 @@ en:
     new:
       button: Message received
       email_placeholder: Email address
-  accessibility: 
-  anonymous: 
-  charged: 
-  confidential: 
-  day_and_night: 
-  free: 
