--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1,4 +1,5 @@
 pl:
+  accessibility: 
   activerecord:
     attributes:
       contact:
@@ -18,10 +19,11 @@ pl:
       contact: NOTRANSLATE
       search_location: NOTRANSLATE
       subscription: NOTRANSLATE
-      update_request: NOTRANSLATE
       trait_filter:
         identifier:
           anonymous: 
+      update_request: NOTRANSLATE
+  anonymous: 
   cells:
     contact_people:
       dr: Dr
@@ -442,10 +444,12 @@ pl:
             url: mailto:post@clarat.org
             var: mailto_clarat
           question: Dlaczego moja organizacja nie znajduje się w clarat?
+  charged: 
   conf:
     current_location: Moja lokalizacja
     default_latlng: 52.520007,13.404954
     default_location: Berlin
+  confidential: 
   contacts:
     create:
       success: Wiadomość została pomyślnie wysłana.
@@ -463,6 +467,7 @@ pl:
         name_placeholder: Imię (Pole obowiązkowe)
         send: Wyślij
         send_us_a_message: Napisz do nas wiadomość
+  day_and_night: 
   emails:
     offers_index:
       family:
@@ -698,6 +703,7 @@ pl:
       sort_order:
         nearby: Blisko
         relevance: W związku z tematem
+  free: 
   js:
     ajax_error:
       error: Błąd wyszukiwania
@@ -1013,8 +1019,8 @@ pl:
             portal: lista adresów
           exclusive_gender:
             boys_only: tylko dla chłopców i mężczyzn
-            girls_only: tylko dla dziewcząt i kobiet
             female: tylko dla dziewcząt i kobiet
+            girls_only: tylko dla dziewcząt i kobiet
             male: tylko dla chłopców i mężczyzn
           target_audience:
             children: dla dzieci i młodzieży
@@ -1050,6 +1056,12 @@ pl:
           long: Oferty na temat …
           short: Oferty dla …
     show:
+      accessibility: 
+      anonymous: 
+      charged: 
+      confidential: 
+      day_and_night: 
+      free: 
       last_update: Ostatnio zaktualizowano
       next_steps:
         code_word: O co musisz spytać lub czego szukać na stronie internetowej?
@@ -1065,6 +1077,22 @@ pl:
           wed: Środa
         heading: Kiedy możesz się zgłosić?
       speaking: W jakim języku można Ci pomóc?
+      trait_filters:
+        explanation:
+          accessibility: 
+          anonymous: 
+          charged: 
+          confidential: 
+          day_and_night: 
+          free: 
+        title:
+          accessibility: 
+          anonymous: 
+          charged: 
+          confidential: 
+          day_and_night: 
+          free: 
+      trait_filters_headline: 
       website_section:
         internet_presence: Gdzie dowiesz się więcej w sieci?
         websites:
@@ -1098,27 +1126,6 @@ pl:
         organizations: 'Oferta od:'
       who_section:
         heading: Gdzie możesz się zgłosić?
-      accessibility: 
-      anonymous: 
-      charged: 
-      confidential: 
-      day_and_night: 
-      free: 
-      trait_filters:
-        explanation:
-          accessibility: 
-          anonymous: 
-          charged: 
-          confidential: 
-          day_and_night: 
-          free: 
-        title:
-          accessibility: 
-          anonymous: 
-          charged: 
-          confidential: 
-          day_and_night: 
-          free: 
   opening:
     display_string:
       appointment: do uzgodnienia
@@ -1415,9 +1422,3 @@ pl:
     new:
       button: Wiadomość otrzymana
       email_placeholder: adres e-mail
-  accessibility: 
-  anonymous: 
-  charged: 
-  confidential: 
-  day_and_night: 
-  free: 
